--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="utf-8">
       <title>My first website</title>
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <h1 class="title">Carry on Wayward Son</h1>
@@ -40,6 +40,9 @@
       <p>I set a course for winds of fortune</p>
       <p>But I hear the voices say</p>
     </div>
-    
+    <div class="author">
+      <p>Written and composed by <span>Kerry Livgren</span></p>
+    </div>
+
   </body>
 </html>
