--- a/index.html
+++ b/index.html
@@ -6,42 +6,47 @@
       <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1 class="title">Carry on Wayward Son</h1>
-    <h2 class="by">Kansas</h2>
-    <div class="chorus">
-      <p>Carry on, my wayward son</p>
-      <p>There'll be peace when you are done</p>
-      <p>Lay your weary head to rest</p>
-      <p>Don't you cry no more</p>
+    <div class=lyrics">
+        <h1 class="title">Carry on Wayward Son</h1>
+        <h2 class="by">Kansas</h2>
+        <div class="chorus">
+          <p>Carry on, my wayward son</p>
+          <p>There'll be peace when you are done</p>
+          <p>Lay your weary head to rest</p>
+          <p>Don't you cry no more</p>
+        </div>
+        <div class="first">
+          <p>Once I rose above the noise and confusion</p>
+          <p>Just to get a glimpse beyond this illusion</p>
+          <p>I was soaring ever higher</p>
+          <p>But I flew too high</p>
+          <p>Though my eyes could see, I still was a blind man</p>
+          <p>Though my mind could think, I still was a mad man</p>
+          <p>I hear the voices when I'm dreaming</p>
+          <p>I can hear them say</p>
+        </div>
+        <div class="chorus">
+          <p>Carry on, my wayward son</p>
+          <p>There'll be peace when you are done</p>
+          <p>Lay your weary head to rest</p>
+          <p>Don't you cry no more</p>
+        </div>
+        <div class="second">
+          <p>Masquerading as a man with a reason</p>
+          <p>My charade is the event of the season</p>
+          <p>And if I claim to be a wise man, well</p>
+          <p>It surely means that I don't know</p>
+          <p>On a stormy sea of moving emotion</p>
+          <p>Tossed about, I'm like a ship on the ocean</p>
+          <p>I set a course for winds of fortune</p>
+          <p>But I hear the voices say</p>
+        </div>
+        <div class="author">
+          <p>Written and composed by <span>Kerry Livgren</span></p>
+        </div>
     </div>
-    <div class="first">
-      <p>Once I rose above the noise and confusion</p>
-      <p>Just to get a glimpse beyond this illusion</p>
-      <p>I was soaring ever higher</p>
-      <p>But I flew too high</p>
-      <p>Though my eyes could see, I still was a blind man</p>
-      <p>Though my mind could think, I still was a mad man</p>
-      <p>I hear the voices when I'm dreaming</p>
-      <p>I can hear them say</p>
-    </div>
-    <div class="chorus">
-      <p>Carry on, my wayward son</p>
-      <p>There'll be peace when you are done</p>
-      <p>Lay your weary head to rest</p>
-      <p>Don't you cry no more</p>
-    </div>
-    <div class="second">
-      <p>Masquerading as a man with a reason</p>
-      <p>My charade is the event of the season</p>
-      <p>And if I claim to be a wise man, well</p>
-      <p>It surely means that I don't know</p>
-      <p>On a stormy sea of moving emotion</p>
-      <p>Tossed about, I'm like a ship on the ocean</p>
-      <p>I set a course for winds of fortune</p>
-      <p>But I hear the voices say</p>
-    </div>
-    <div class="author">
-      <p>Written and composed by <span>Kerry Livgren</span></p>
+    <div class="image">
+        <img src="https://images.pexels.com/photos/3143922/pexels-photo-3143922.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="angel">
     </div>
 
   </body>
