First change to index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div class=lyrics">
         <h1 class="title">Carry on Wayward Son</h1>
         <h2 class="by">Kansas</h2>
+                      <h3>Zmiana pierwsza</h3>
         <div class="chorus">
           <p>Carry on, my wayward son</p>
           <p>There'll be peace when you are done</p>
